	- Added 'released' release filter
	- Changed order of the filter action buttons
	- Slightly re-organized lang.txt
	- Fixed perl warning on /u+/votes batchedit with nothing selected
	- Switched to TUWF
	- Order "all notifications" with new notifications first
	- Added /t/all - a listing of all recently replied to threads
	- Added error message when selected meta tags on VN filters
	- Bugfix: Correctly randomize screenshots on homepage with filters
	- Bugfix: Don't show NSFW screenshots on homepage with filters
	- Bugfix-API: Use ~ for the get vn search filter instead of =
	- Bugfix: Secondary order by title or username on vote listings

2.16 - 2011-01-02
	- VNDBUtil::bb2html(): Fixed bug when the string starts with a VNDBID
	- VNDBUtil::bb2html(): Fixed bug with lowercasing all [url=..] URLs
	- Fixed perl warning on /v/search redirect without search query
	- Bugfix: Don't allow others to open /u+/votes when show_list is false
	- Don't allow NULL for rr.minage and use -1 for unknown
	- Check for editsum = description and give an easier to understand error
	- RFC-01: Added vnlists feature and removed rlists.vstat option
	- ULists::votelist: Don't give a 404 on /u+/votes when no votes found
	- Added tab and link for /u+/votes to user tabs & main menu
	- Added ability to batch-edit votes to /u+/votes
	- Update the votes.date column when changing a vote
	- ULists::votelist: Added first character selection
	- Added advanced page-browsing tabs to threads
	- Added notes field to the user VN list
	- Added vnlists.status filter to /u+/list
	- Pass VN tag filters by ID rather than name
	- Improved VN tag filter selection with a dynamic HTML list of selected tags
	- Don't send 'tagspoil' filter when 'tag_inc' isn't active
	- Don't allow page > 100 or sorting on username or title on tag link browser
	- Added users_prefs table and removed the following columns from users:
	  skin, customcss, show_nsfw, show_list, notify_announce, notify_dbedit