@@ -8,6 +8,7 @@
 	- Order "all notifications" with new notifications first
 	- Added /t/all - a listing of all recently replied to threads
 	- Added error message when selected meta tags on VN filters
+	- Display warning for non-standard resolutions of uploaded screenshots
 	- Bugfix: Correctly randomize screenshots on homepage with filters
 	- Bugfix: Don't show NSFW screenshots on homepage with filters
 	- Bugfix-API: Use ~ for the get vn search filter instead of =
